[tool.poetry]
name = "pycardano"
version = "0.7.3"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
description = "A Cardano library in Python"
homepage = "https://github.com/Python-Cardano/pycardano"
documentation = "https://pycardano.readthedocs.io/en/latest/"
keywords = ["python", "cardano", "blockchain", "crypto"]
authors = ["Jerry <jerrycgh@gmail.com>"]
readme = "README.md"
repository = "https://github.com/cffls/pycardano"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
PyNaCl = "^1.5.0"
cbor2 = "^5.4.3"
typeguard = "^2.13.3"
blockfrost-python = "0.5.2"
websocket-client = "^1.4.1"
cose = "0.9.dev8"
pprintpp = "^0.4.0"
mnemonic = "^0.20"
ECPy = "^1.2.5"

[tool.poetry.dev-dependencies]
Sphinx = "^4.3.2"
sphinx-rtd-theme = "^1.1.1"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
flake8 = "^5.0.4"
isort = "^5.11.4"
black = "^22.3.0"
sphinx-copybutton = "^0.5.0"
retry = "^0.9.2"
Flask = "^2.0.3"
pytest-xdist = "^3.0.2"
mypy = "^0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=examples --ignore=integration-test --ignore=test/resources/haskell"
minversion = "6.0"
markers = [
    "post_alonzo",
    "single"
]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["str-bytes-safe"]
python_version = 3.7
exclude = [
    '^pycardano/crypto/bech32.py$',
]
