[tool.poetry]
name = "pycardano"
version = "0.19.0"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
description = "A Cardano library in Python"
homepage = "https://github.com/Python-Cardano/pycardano"
documentation = "https://pycardano.readthedocs.io/en/latest/"
keywords = ["python", "cardano", "blockchain", "crypto"]
authors = ["Jerry <jerrycgh@gmail.com>"]
readme = "README.md"
repository = "https://github.com/Python-Cardano/pycardano"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.1"
PyNaCl = ">=1.5.0"
cbor2 = ">=5.6.5"
typeguard = ">=4.3.0"
blockfrost-python = ">=0.6.0"
websocket-client = ">=1.4.1"
cose = ">=0.9.dev8"
pprintpp = ">=0.4.0"
mnemonic = ">=0.21"
ECPy = ">=1.2.5"
frozendict = ">=2.3.8"
frozenlist = ">=1.3.3"
cachetools = ">=5.3.0"
docker = ">=7.1.0"
ogmios = ">=1.4.2"
requests = ">=2.32.3"
websockets = ">=13.0"
base58 = ">=2.1.0"
cbor2pure = ">=5.7.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"
pytest-cov = ">=5.0.0"
flake8 = ">=7.0.0"
isort = ">=5.11.4"
black = ">=24.4.2"
sphinx-copybutton = ">=0.5.0"
retry = ">=0.9.2"
Flask = ">=2.0.3"
pytest-xdist = ">=3.5.0"
mypy = "1.14.1"

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.2.3"
sphinx-rtd-theme = ">=3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=examples --ignore=integration-test --ignore=test/resources/haskell"
minversion = "6.0"
markers = [
    "post_alonzo",
    "single",
    "CardanoCLI",
    "post_chang"
]


[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["str-bytes-safe"]
python_version = 3.9
exclude = [
    '^pycardano/crypto/bech32.py$',
]
